--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Jasmine - Recruitment web</title>
+		<title>Jasmine - Recruitment site</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/png" href="./assets/jasmine.png" />
